<resources>
    <string name="app_name">Dualidades</string>
    <string name="Credito">Credito</string>
    <string name="Fases">Fases</string>
    <string name="Inimigos">Inimigos</string>
    <string name="titulo">DUALIDADES DO DESTINO</string>
    <string name="texttest">Ela era bruxa, ele era um lobo.Ambos prontos para amar.Ela tão
        clara, ele tão escuro.Ambos em busca de se encontrar.Ele corria, e ela fugia.A noite ele
        aparecia com seu uivo dolorido.E ela surgia a iluminar a noite com o luar.A bruxa era vida e
        o Lobo o destino.</string>
    <string name="INIMIGOS">INIMIGOS FASE 1</string>
    <string name="INIMIGOS2">INIMIGOS FASE 2</string>
    <string name="INIMIGOS3">INIMIGOS FASE 3</string>
    <string name="INIMIGOS4">INIMIGOS FASE 4</string>
    <string name="fase1">Fase 1</string>
    <string name="fase2">Fase 2</string>
    <string name="fase3">Fase 3</string>
    <string name="fase4">Fase 4</string>
    <string name="FASES">FASES</string>
    <string name="Cenario">Cenario</string>
    <string name="Boss">Chefão</string>
    <string name="Perfil">Perfil</string>
    <string name="Projeto">Projeto</string>
    <string name="text_button"> </string>
    <string name="dualidades_do_destino">Dualidades do destino</string>
    <string name="Tatu">Tatu</string>
    <string name="Clerio">Clérigo</string>
    <string name="esqueleto">Esqueleto</string>
    <string name="prisioneiro">Prisioneiro</string>
    <string name="Fantasma">Fantasma</string>
    <string name="zumbi">Zumbi</string>
    <string name="Vagante">Vangante</string>
    <string name="morte">Morte(Boss)</string>
    <string name="Escudeiro">Escudeiro</string>
    <string name="sd">Soldado possuido</string>
    <string name="Abelha">Abelha</string>
    <string name="mapa1">Mapa 1</string>
    <string name="mapa2">Mapa 2</string>
    <string name="mapa3">Mapa 3</string>
    <string name="larva">Larva</string>






</resources>
