<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cena1"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/BtnFases"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:contentDescription="@string/Boss"
        android:onClick="IrParaTelaFases"
        android:text="@string/Fases"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        app:srcCompat="@drawable/buttonfas" />

    <ImageButton
        android:id="@+id/BtnCredito"
        android:layout_width="145dp"
        android:layout_height="57dp"
        android:contentDescription="@string/Credito"
        android:onClick="IrParaTelaCredito"
        android:text="@string/Credito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        app:srcCompat="@drawable/buttoncredito" />

</androidx.constraintlayout.widget.ConstraintLayout>