<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inimi3"
    tools:context=".inimigos4">

    <ScrollView
        android:layout_width="266dp"
        android:layout_height="547dp"
        android:background="@color/cinza_esc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/zumbi" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/zumbi"
                android:textColor="@color/laranja"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/esqueleto" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/esqueleto"
                android:textColor="@color/laranja"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/vagante" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/Vagante"
                android:textColor="@color/laranja"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry"/>

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/fantasma" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/Fantasma"
                android:textColor="@color/laranja"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry"/>


            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/morte" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/morte"
                android:textColor="@color/laranja"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>