<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inimi1"
    android:onClick="IrParaTelaMenu"
    tools:context=".inimigos">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="266dp"
        android:layout_height="547dp"
        android:background="@color/Verde_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="219dp"
                android:src="@drawable/tatu" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/Tatu"
                android:textColor="@color/marrom_escuro"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                android:src="@drawable/abelha" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:text="@string/Abelha"
                android:layout_margin=""
                android:textColor="@color/marrom_escuro"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/larva" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:justificationMode="inter_word"
                android:paddingHorizontal="5dp"
                android:paddingStart="10dp"
                android:text="@string/larva"
                android:textAlignment="center"
                android:textColor="@color/marrom_escuro"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>